:bug: fix #6 horizontal scroll menu responsive

--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,5 +1,9 @@
 /* Grid */
 
+.wrapper-global{
+    overflow: hidden;
+}
+
 .main{
     //temp
     min-height: 700px;
